--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -41,7 +41,7 @@
 
 /*!---------- 1. GLOBAL STYLES ----------*/
 
-body{ /*-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;*/ font-size: 13px; line-height: 24px; font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif; color:#666; overflow-x: hidden; }
+body{ /*-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;*/ font-size: 16px; line-height: 24px; font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif; color:#666; overflow-x: hidden; }
 body.boxed-layout{ background: #eee; }
 body.boxed-layout .main-container{ background: #fff; }
 body.boxed-layout, .boxed-layout .nav-container, .boxed-layout .main-container, .boxed-layout nav{ max-width: 1366px; margin: 0 auto; left: 0; right: 0; }
@@ -157,6 +157,17 @@ hr.short-thick{ max-width: 50px; border-top: 5px solid #ccc; opacity: 1 !importa
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+}
+
+.top-arr(@height,@neg-mar,@color) {
+	border-width: 0 50vw @height 50vw;
+	border-color: transparent transparent @color transparent;
+	top: @neg-mar;
+}
+.bottom-arr(@height,@neg-mar,@color) {
+	border-width: @height 50vw 0 50vw;
+	border-color: @color transparent transparent transparent;
+	bottom: @neg-mar;
 }
 
 @media all and (max-width: 990px){
@@ -2212,6 +2223,150 @@ a.btn.twitter {
 .foundry_modal[modal-link="3"]{
 	padding-bottom: 48px;
 }
+
+
+
+/******************
+ABOUT
+*******************/
+
+.background-image-holder-about {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 0;
+	background: #292929;
+	background-size: cover !important;
+	background-position: 50% 50% !important;
+	transition: all 0.3s ease;
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	background-image: url("http://wealthylife.dev/images/about-back.jpg");
+	transform: translate3d(0px, 0px, 0px);
+}
+.background-image-holder-about:before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: #000;
+	opacity: 0.5;
+	z-index: 2;
+}
+
+h2.page-h2 {
+	letter-spacing: 1px;
+	font-weight: 700;
+	font-size: 53px;
+}
+
+p.lead.below {
+	font-weight: 400;
+}
+
+.arrow-style {
+	width:100%;
+	background: white;
+	position: relative;
+}
+
+span.arrow {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	display: block;
+	position: absolute;
+}
+
+.top-arr { .top-arr(70px,-69px,white); }
+
+.bottom-arr {  .bottom-arr(70px,-69px,white);  }
+
+.half {
+	width: 50%;
+}
+
+.pink-text {
+	color: #FB324A;
+}
+.bold700 {
+	font-weight: 700;
+}
+
+.container.first-about-block {
+	width: 1480px;
+	padding: 0 0 0 170px;
+}
+
+.about-block {
+
+		.pink-text {
+			font-weight: 700;
+		}
+
+		img {
+			width: 100%;
+		}
+
+		img.bigger-image {
+			width: 130%;
+			margin-left: -30%;
+			max-width: none;
+		}
+
+		h3, h4, h5 {
+			letter-spacing: 0;
+			font-weight: 700;
+		}
+
+		h3.uppercase {
+			font-size: 50px;
+		}
+
+		h4.uppercase {
+			font-size: 30px;
+			padding-right: 230px;
+			opacity: 0.8;
+		}
+
+		h5.uppercase {
+			font-size: 19px;
+			padding-right: 340px;
+			opacity: 0.6;
+		}
+
+		.phrase {
+			font-size: 20px;
+		}
+}
+
+.how-it-works {
+
+	width: 100%;
+
+	li {
+		float: left;
+		display: inline;
+		width: 50%;
+		padding-left: 50px;
+		height: 70px;
+	}
+
+}
+
+
+
+
+
+
+
+
+
+
 
 /************************
 DESKTOP FIXES
