user suspend account, consultant pause account, phrases fixed texts

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9707,4 +9707,13 @@ tr.periods {
 .ajax-notification .new-messages {
   font-weight: bold; }
 
+.inline-block {
+  display: inline-block; }
+
+.push-left {
+  float: left; }
+
+.push-right {
+  float: right; }
+
 /*# sourceMappingURL=admin.css.map */
