--- a/resources/assets/sass/admin/app.scss
+++ b/resources/assets/sass/admin/app.scss
@@ -251,3 +251,12 @@ tr.periods {
 .ajax-notification .new-messages{
   font-weight: bold;
 }
+.inline-block{
+  display: inline-block;
+}
+.push-left{
+  float: left;
+}
+.push-right{
+  float: right;
+}
