--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9716,4 +9716,16 @@ tr.periods {
 .push-right {
   float: right; }
 
+#answer-timer {
+  font-size: 50px;
+  text-align: center; }
+
+#saved-msg {
+  width: 100%;
+  text-align: center;
+  font-size: 16px; }
+
+.saved-container {
+  height: 40px; }
+
 /*# sourceMappingURL=admin.css.map */
