--- a/resources/assets/sass/admin/app.scss
+++ b/resources/assets/sass/admin/app.scss
@@ -260,3 +260,15 @@ tr.periods {
 .push-right{
   float: right;
 }
+#answer-timer{
+  font-size: 50px;
+  text-align: center;
+}
+#saved-msg{
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+}
+.saved-container{
+  height: 40px;
+}
