--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -389,8 +389,7 @@ h6.uppercase,
   letter-spacing: 2px;
   font-weight: 700;
 }
-p,
-span {
+p {
   font-weight: 400;
 }
 p.lead {
@@ -558,7 +557,7 @@ footer.bg-dark {
 /*!---------- 5. SECTIONS ----------*/
 section,
 footer {
-  padding: 96px 0;
+  padding: 100px 0;
   position: relative;
   overflow: hidden;
 }
@@ -5932,7 +5931,7 @@ ABOUT
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
-  background-image: url("http://wealthylife.dev/images/about-back.jpg");
+  background-image: url("../images/about-bg.jpg");
   transform: translate3d(0px, 0px, 0px);
 }
 .background-image-holder-about:before {
@@ -5959,6 +5958,10 @@ p.lead.below {
   background: white;
   position: relative;
 }
+.arrow-style .row {
+  position: relative;
+  z-index: 2;
+}
 span.arrow {
   width: 0;
   height: 0;
@@ -5966,34 +5969,136 @@ span.arrow {
   display: block;
   position: absolute;
 }
-.top-arr {
-  border-width: 0 50vw 70px 50vw;
-  border-color: transparent transparent white transparent;
-  top: -69px;
+/***************
+ROTATION
+*********************/
+.curve-wrap {
+  padding: 0;
+  height: 700px;
+  width: 50%;
+  position: absolute;
+  margin: 0;
+  overflow: hidden;
 }
-.bottom-arr {
-  border-width: 70px 50vw 0 50vw;
-  border-color: white transparent transparent transparent;
-  bottom: -69px;
+.left-top-wrap {
+  left: 0;
+  top: -111px;
+}
+.right-top-wrap {
+  right: 0;
+  top: -111px;
+}
+.left-bottom-wrap {
+  left: 0;
+  bottom: -111px;
+}
+.right-bottom-wrap {
+  right: 0;
+  bottom: -111px;
+}
+.rotated {
+  z-index: 1;
+  width: 115%;
+  height: 700px;
+  position: absolute;
+  overflow: hidden;
+}
+.left-top {
+  top: 55px;
+  left: 0;
+  -o-transform: rotate(-6deg);
+  -moz-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+  -ms-transform: rotate(-6deg);
+}
+.right-top {
+  top: 55px;
+  right: 0;
+  -o-transform: rotate(6deg);
+  -moz-transform: rotate(6deg);
+  -webkit-transform: rotate(6deg);
+  -ms-transform: rotate(6deg);
+}
+.left-bottom {
+  bottom: 55px;
+  left: 0;
+  -o-transform: rotate(6deg);
+  -moz-transform: rotate(6deg);
+  -webkit-transform: rotate(6deg);
+  -ms-transform: rotate(6deg);
+}
+.right-bottom {
+  bottom: 55px;
+  right: 0;
+  -o-transform: rotate(-6deg);
+  -moz-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+  -ms-transform: rotate(-6deg);
+}
+.top-part {
+  background-color: white;
+  position: absolute;
+  top: 1px;
+  width: 130%;
+  height: 110px;
+}
+.bottom-part {
+  background-color: white;
+  position: absolute;
+  bottom: 1px;
+  width: 130%;
+  height: 110px;
+}
+.curved-image-rb {
+  position: absolute;
+  bottom: -165px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  -o-transform: rotate(6deg);
+  -moz-transform: rotate(6deg);
+  -webkit-transform: rotate(6deg);
+  -ms-transform: rotate(6deg);
 }
 .half {
   width: 50%;
 }
-.pink-text {
+.color-pink,
+span.color-pink {
   color: #FB324A;
+}
+.color-blue {
+  color: #155696;
+}
+.color-dark-blue {
+  color: #324870;
+}
+.color-green {
+  color: #85C362;
+}
+.color-orange {
+  color: #DA9221;
+}
+.color-purple {
+  color: #44393C;
 }
 .bold700 {
   font-weight: 700;
 }
-.container.first-about-block {
-  width: 1480px;
-  padding: 0 0 0 170px;
+@media all and (min-width: 1600px) {
+  .container.first-about-block {
+    width: 1480px;
+    padding: 0 0 0 170px;
+  }
 }
 .about-block .pink-text {
   font-weight: 700;
 }
 .about-block img {
   width: 100%;
+}
+.about-block img.width28 {
+  width: 28%;
 }
 .about-block img.bigger-image {
   width: 130%;
@@ -6007,11 +6112,12 @@ span.arrow {
   font-weight: 700;
 }
 .about-block h3.uppercase {
+  line-height: 50px;
   font-size: 50px;
 }
 .about-block h4.uppercase {
   font-size: 30px;
-  padding-right: 230px;
+  padding-right: 45%;
   opacity: 0.8;
 }
 .about-block h5.uppercase {
@@ -6030,7 +6136,191 @@ span.arrow {
   display: inline;
   width: 50%;
   padding-left: 50px;
-  height: 70px;
+  height: auto;
+  margin-bottom: 25px;
+  background-size: 44px auto;
+  background-position: left;
+}
+.how-it-works li.how1 {
+  background: url("../images/log-in-icon.svg") no-repeat;
+  background-size: 33px auto;
+}
+.how-it-works li.how2 {
+  background: url("../images/blog-icon.svg") no-repeat;
+  background-size: 38px auto;
+}
+.how-it-works li.how3 {
+  background: url("../images/attach-picture-icon.svg") no-repeat;
+  background-size: 36px auto;
+  background-position-y: 7px;
+}
+.how4 {
+  background: url("../images/paypal-credit-card-icon.svg") no-repeat;
+}
+.how5 {
+  background: url("../images/mail-notification-icon.svg") no-repeat;
+}
+.how6 {
+  background: url("../images/stylesensei-acc-icon.svg") no-repeat;
+}
+.arrow-style-invert {
+  width: 100%;
+  position: relative;
+  height: auto;
+}
+.left-image {
+  position: absolute;
+  width: 570px;
+  height: auto;
+  left: 0;
+  top: -15px;
+}
+.right-image {
+  position: absolute;
+  width: 700px;
+  height: auto;
+  right: 0;
+  z-index: 2;
+  top: -34px;
+}
+.padleft150 {
+  padding-left: 150px;
+}
+.padleft48 {
+  padding-left: 48px;
+}
+.width90 {
+  width: 90%;
+}
+.index3 {
+  z-index: 3;
+}
+.about-block.on-black {
+  margin: 200px 0 150px;
+  color: white;
+}
+.about-block.on-black h3.uppercase {
+  color: white;
+}
+.about-block.on-black.blog {
+  margin: 144px 0 110px;
+}
+.center-cont {
+  width: 73%;
+  margin: auto;
+  text-align: left;
+  display: inline-block;
+}
+.center-cont .about-block {
+  width: 68%;
+}
+.center-cont .about-block.right {
+  width: 60%;
+}
+.center-cont .width40 img {
+  max-width: none;
+  width: 130%;
+  margin-top: -20%;
+}
+.absolute {
+  position: absolute;
+}
+img.mission-icon {
+  width: 136px;
+  top: -67px;
+  left: -89px;
+}
+img.blog-icon {
+  width: 91px;
+  top: -32px;
+  left: 150px;
+}
+.width32 {
+  width: 32%;
+}
+.width40 {
+  width: 40%;
+}
+.font-weight400 {
+  font-weight: 400;
+}
+.credits-head {
+  color: #BCA46D;
+}
+.color-gift {
+  color: #D54843;
+}
+.gift-head {
+  color: #5E5E5C;
+}
+.referral-works {
+  width: 33%;
+  display: inline-block;
+  text-align: left;
+  height: 72px;
+  padding-left: 100px;
+  background-size: 44px auto;
+  background-position: 28px center;
+  background-repeat: no-repeat;
+}
+.ref1 {
+  background-image: url("../images/log-in-icon.svg");
+}
+.ref2 {
+  background-image: url("../images/refferral-mail-icon.svg");
+  background-size: 63px auto;
+  background-position: 28px 15px;
+}
+.ref3 {
+  background-image: url("../images/zoom-eye-icon.svg");
+  background-position: 28px center;
+  background-size: 50px auto;
+}
+.ref4 {
+  background-image: url("../images/credit-points-icon.svg");
+  background-size: 68px auto;
+  background-position: 20px top;
+}
+.ref5 {
+  background-image: url("../images/save-money-icon.svg");
+  background-size: 56px auto;
+  background-position: 28px top;
+}
+.curved-image-rb.last-img {
+  left: initial;
+}
+/************* ABOUT UNTILL 1366 ****************/
+@media all and (max-width: 1600px) {
+  .how-it-works li {
+    font-size: 14px;
+  }
+  .about-block .phrase {
+    font-size: 18px;
+  }
+  .about-block h3.uppercase {
+    line-height: 48px;
+    font-size: 48px;
+  }
+  .about-block h4.uppercase {
+    font-size: 28px;
+  }
+  .about-block h5.uppercase {
+    font-size: 17px;
+  }
+  .curved-image-rb {
+    bottom: -170px;
+    width: 447px;
+  }
+  .about-block img.bigger-image {
+    width: 120%;
+    margin-left: -18%;
+  }
+}
+@media all and (max-width: 1366px) {
+  .right-image {
+    width: 620px;
+    top: 7px;
+  }
 }
 /************************
 DESKTOP FIXES
