--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -280,7 +280,7 @@ blockquote .author{ font-size: 12px; display: block; float: right; margin-top: 1
 .columns-2{ column-count: 2; -webkit-column-count: 2; }
 
 @media all and (max-width: 768px){
-	br{ display: none; }
+//	br{ display: none; }
 	blockquote{ font-size: 16px; line-height: 32px; }
 	.columns-2{ column-count: 1; -webkit-column-count: 1; }
 }
@@ -335,7 +335,7 @@ footer{ padding: 30px 0; }
 
 
 @media all and (max-width: 768px){
-	section{ padding: 80px 0; }
+	section{ padding: 100px 0; }
 }
 
 .overlay:before{ .overlay-params(.3,@bg-dark); }
@@ -422,7 +422,7 @@ nav.bg-dark .logo-dark{ display: none; }
 
 .menu{ position: relative; width: 100%; height: @nav-height; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; }
 .menu.inline-block{ width: auto; }
-.menu li a{ position: relative; font-size: 15px; text-transform: uppercase; font-weight: 600; letter-spacing: 1px; color: @bg-dark; opacity: 0.5; .transition(0.3s); max-width: 100%; white-space: normal; }
+.menu li a{ position: relative; font-size: 15px; text-transform: uppercase; font-weight: 400; letter-spacing: 1px; color: @bg-dark; opacity: 0.5; .transition(0.3s); max-width: 100%; white-space: normal; }
 .menu li a:hover{ opacity: 1 !important; }
 .menu > li{ padding: 0 16px; float: left; position: relative; .transition(0.3s); opacity: 1; }
 .menu > li:last-child{ margin-right: 0; }
@@ -1947,6 +1947,24 @@ footer.bg-dark a{ color: #fff; }
 WHERE MAGIC HAPPENS
 **********************/
 
+
+.left{
+	float: left;
+}
+
+.right{
+	float: right;
+}
+
+nav.transparent .menu > li.current > a {
+	color: #fb324a;
+	opacity: 1;
+}
+
+.nav-bar {
+	background-color: rgba(0,0,0, 0.4);
+}
+
 .background-image-holder{
 	height: 100vh;
 }
@@ -2231,6 +2249,11 @@ a.btn.twitter {
 ABOUT
 *******************/
 
+
+.nav-is-overlay .page-title-4.image-bg:first-child {
+	height: 235px;
+}
+
 .background-image-holder-about {
 	position: fixed;
 	width: 100%;
@@ -2327,6 +2350,7 @@ ROTATION
 	height: 700px;
 	position: absolute;
 	overflow: hidden;
+	outline: 1px solid transparent;
 }
 
 .left-top {
@@ -2612,13 +2636,15 @@ img.blog-icon {
 .gift-head {
 	color: #5E5E5C;
 }
-
+.mob-block {
+	display: none;
+}
 .referral-works {
 	width: 33%;
 	display: inline-block;
 	text-align: left;
 	height: 72px;
-	padding-left: 100px;
+	padding-left: 97px;
 	background-size: 44px auto;
 	background-position: 28px center;
 	background-repeat: no-repeat;
@@ -2651,9 +2677,11 @@ img.blog-icon {
 .curved-image-rb.last-img {
 	left: initial;
 }
+.visible570 {
+	display: none;
+}
 
-
-/************* ABOUT UNTILL 1366 ****************/
+/************* ABOUT Desktop Responsive ****************/
 @media all and (max-width:1600px) {
 .how-it-works li
 { font-size: 14px;}
@@ -2692,6 +2720,417 @@ img.blog-icon {
 		top: 7px;
 	}
 }
+
+@media all and (max-width: 1350px) {
+	.about-block img.bigger-image {
+		margin-top: 56px;
+		width: 100%;
+		margin-left: 0;
+	}
+}
+
+@media all and (max-width:1240px) {
+	.how-it-works li
+	{ font-size: 13px;}
+
+	body {
+		font-size: 14px;
+	}
+
+	.about-block .phrase {
+		font-size: 16px;
+	}
+
+	.about-block h3.uppercase {
+		line-height: 41px;
+		font-size: 41px;
+	}
+
+	.about-block h4.uppercase {
+		font-size: 26px;
+	}
+	.about-block h5.uppercase {
+		font-size: 15px;
+	}
+
+	.curved-image-rb {
+		bottom: -155px;
+		width: 405px;
+	}
+	.about-block img.width28 {
+		width: 20%;
+	}
+
+	p.lead {
+		font-size: 16px;
+	}
+	h2.page-h2 {
+		font-size: 42px;
+	}
+	.left-image {
+		left: -140px;
+	}
+	.right-image {
+		right: -80px;
+	}
+
+}
+@media all and (max-width:1200px) {
+
+	.about-block img.bigger-image {
+		width: 110%;
+		margin-left: -10%;
+	}
+
+	.about-block h4.uppercase,
+	.about-block h5.uppercase {
+		padding: 0;
+	}
+
+	.how-it-works li {
+		font-size: 11px;
+	}
+
+}
+
+
+/************* ABOUT Mobile Responsive ****************/
+
+
+@media (max-width: 991px) and (min-width: 768px) {
+	.visible-sm {
+		display: none!important;
+	}
+}
+
+@media (max-width: 990px) and (min-width: 768px) {
+	.visible-sm {
+		display: block!important;
+	}
+}
+
+@media all and (max-width:990px) {
+
+	.curve-wrap,
+	.half {
+		width:100%;
+	}
+	.half {
+		padding-right: 190px;
+	}
+	.mob-none {
+		display: none;
+	}
+
+	.nofloat-mob {
+		float:none;
+	}
+	.rfloat-mob {
+		float:right;
+	}
+	.padright30-mob {
+		padding-right: 30px;
+	}
+	.padbottom150-mob {
+		padding-bottom: 150px;
+	}
+
+	.mob-left-to-right {
+			.right-top-wrap,
+			.left-bottom-wrap {
+				display: none;
+			}
+	}
+	.mob-right-to-left {
+		.left-top-wrap,
+		.right-bottom-wrap {
+			display: none;
+		}
+	}
+
+	.mobile-absolute {
+		position: absolute;
+	}
+	.position1 {
+		right: -545px;
+	}
+	.position2 {
+		right: -195px;
+		padding: 0;
+		top: -84px;
+		width: 346px;
+	}
+	.position3 {
+		width: 820px;
+		bottom: -145px;
+		right: -90px;
+		-o-transform: rotate(15deg);
+		-moz-transform: rotate(15deg);
+		-webkit-transform: rotate(15deg);
+		-ms-transform: rotate(15deg);
+	}
+	.about-block img.bigger-image {
+		width: 100%;
+		margin-left: 0;
+	}
+	.curved-image-rb {
+		bottom: -187px;
+		right: -622px;
+		width: 490px;
+	}
+
+	.how-it-works li {
+		float: none;
+		display: block;
+		width: 60%;
+	}
+	.center-cont {
+		width: 100%;
+
+			.padleft48 {
+				padding-left: 0;
+			}
+	}
+	.center-cont .width40 img {
+		margin-top: 0;
+		width: 110%;
+	}
+
+	.referral-works {
+		width: 50%;
+		margin-bottom: 25px;
+		float: left;
+		margin-top: 0;
+	}
+
+	.center-cont .about-block.width90-mob {
+		width: 90%;
+	}
+	.mob-block {
+		display: block;
+	}
+	.ref2 {
+		background-position: 17px 15px;
+	}
+	.ref4 {
+		background-position: 14px top;
+	}
+		/*** font sizes ***/
+
+	.how-it-works li
+	{ font-size: 16px;}
+
+	body {
+		font-size: 16px;
+	}
+
+	.about-block .phrase {
+		font-size: 18px;
+	}
+
+	.about-block h3.uppercase {
+		line-height: 48px;
+		font-size: 48px;
+	}
+
+	.about-block h4.uppercase {
+		font-size: 28px;
+	}
+	.about-block h5.uppercase {
+		font-size: 17px;
+	}
+
+
+}
+
+@media all and (max-width: 920px) {
+	.right-bottom {
+		right: -13px;
+		width: 1022px;
+	}
+}
+
+@media all and (max-width:850px) {
+	.center-cont .width40 img {
+		width: 100%;
+	}
+}
+
+@media all and (max-width:800px) {
+	.arrow-style,
+	.arrow-style-invert {
+		padding-left: 40px;
+		padding-right: 40px;
+	}
+}
+
+@media all and (max-width:768px) {
+	p {
+		font-size: 16px;
+	}
+	.container {
+		width: 100%;
+	}
+	img.mission-icon {
+		top: -24px;
+	}
+	.half {
+		padding-right: 140px;
+	}
+	.referral-works {
+		float:none;
+		width: 421px;
+	}
+	.ref4,
+	.ref5{
+		padding-right: 69px;
+	}
+
+}
+
+@media all and (max-width:728px) {
+	.position1 {
+		right: -451px;
+	}
+	.position2 {
+		right: -247px;
+	}
+}
+
+@media all and (max-width:719px) {
+	.half {
+		padding-right: 90px;
+	}
+}
+
+@media all and (max-width:679px) {
+	.center-cont,
+	.center-cont .about-block,
+	.center-cont .about-block.right {
+		width: 100%;
+	}
+	.center-cont img {
+		display: none;
+	}
+}
+
+
+@media all and (max-width: 672px) {
+	.how-it-works li {
+		width: 76%;
+	}
+	.mission {
+		width: 340px;
+		float: none;
+		padding: 0;
+	}
+	.about-block.on-black {
+		margin: 150px auto 150px;
+	}
+	.curved-image-rb {
+		bottom: -253px;
+		right: -795px;
+	}
+	.position2 {
+		right: -247px;
+	}
+
+}
+
+@media all and (max-width: 642px) {
+
+	/************** FONT SIZES ****************/
+
+	.how-it-works li
+	{ font-size: 16px;}
+
+	body {
+		font-size: 16px;
+	}
+
+	.about-block .phrase {
+		font-size: 18px;
+	}
+
+	.about-block h3.uppercase {
+		line-height: 48px;
+		font-size: 48px;
+	}
+
+	.about-block h4.uppercase {
+		font-size: 28px;
+	}
+	.about-block h5.uppercase {
+		font-size: 17px;
+	}
+}
+
+@media all and (max-width: 627px) {
+	
+	.position1 {
+		right: -418px;
+		width: 546px;
+	}
+
+}
+@media all and (max-width: 570px) {
+	.curved-image-rb {
+		display: none;
+	}
+	.visible570 {
+		display: block;
+		right: -41px;
+	}
+	.how-it-works {
+		width: 100%;
+	}
+	.how-it-works li {
+		width: 100%;
+	}
+}
+
+@media all and (max-width: 550px) {
+	.about-block.on-black {
+		padding-left: 50px;
+		margin: 100px auto 100px;
+	}
+	.about-block.on-black.blog,
+	.about-block.on-black {
+		padding: 0;
+	}
+	.arrow-style, .arrow-style-invert {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	/************* font sizes *************/
+
+	.about-block h3.uppercase {
+		line-height: 46px;
+		font-size: 46px;
+	}
+
+	.about-block h3.uppercase.fs35on550 {
+		line-height: 38px;
+		font-size: 35px;
+	}
+
+
+}
+@media all and (max-width: 460px) {
+	.half {
+		padding-right: 50px;
+	}
+}
+
+
+@media all and (max-width: 410px) {
+	.half {
+		padding-right: 0;
+	}
+}
+
+
 
 /************************
 DESKTOP FIXES
@@ -2834,6 +3273,9 @@ DESKTOP FIXES
 		background: url("../images/SIMPLICITY.svg") no-repeat;
 	}
 }
+
+
+
 
 /*************
 MOBILE
