about do konca responsive + fixes

--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -965,7 +965,7 @@ nav.bg-dark .logo-dark {
   -webkit-transform: translate3d(0, 10px, 0);
   -moz-transform: translate3d(0, 10px, 0);
   visibility: hidden;
-  margin-top: -1px;
+  margin-top: 0;
 }
 .menu > li > ul > li {
   position: relative;
@@ -5684,6 +5684,9 @@ nav.transparent .menu > li.current > a {
   color: #fb324a;
   opacity: 1;
 }
+nav.transparent .menu > li:first-child > a {
+  color: white !important;
+}
 .nav-bar {
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -5842,7 +5845,7 @@ footer span.company-color {
   font-weight: 600;
 }
 .login-header {
-  width: 260px;
+  width: 300px;
   height: 43px;
   position: absolute;
   bottom: 20px;
@@ -6206,8 +6209,14 @@ span.color-pink {
 .width90 {
   width: 90%;
 }
+.index-1 {
+  z-index: -1;
+}
 .index3 {
   z-index: 3;
+}
+.index0 {
+  z-index: 0;
 }
 .about-block.on-black {
   margin: 200px 0 150px;
@@ -6309,6 +6318,16 @@ img.blog-icon {
 .visible570 {
   display: none;
 }
+h1.uppercase {
+  letter-spacing: 1px;
+  font-weight: 700;
+  margin-bottom: 0;
+  font-size: 48px;
+  line-height: 48px;
+}
+.check-time-button {
+  margin-bottom: 0;
+}
 /************* ABOUT Desktop Responsive ****************/
 @media all and (max-width: 1600px) {
   .how-it-works li {
@@ -6327,7 +6346,7 @@ img.blog-icon {
   .about-block h5.uppercase {
     font-size: 17px;
   }
-  .curved-image-rb {
+  .curved-image-rb.blond {
     bottom: -170px;
     width: 447px;
   }
@@ -6340,6 +6359,9 @@ img.blog-icon {
   .right-image {
     width: 620px;
     top: 7px;
+  }
+  .curved-image-rb.last-img {
+    bottom: -100px;
   }
 }
 @media all and (max-width: 1350px) {
@@ -6369,7 +6391,7 @@ img.blog-icon {
   .about-block h5.uppercase {
     font-size: 15px;
   }
-  .curved-image-rb {
+  .curved-image-rb.blond {
     bottom: -155px;
     width: 405px;
   }
@@ -6541,7 +6563,8 @@ img.blog-icon {
 }
 @media all and (max-width: 800px) {
   .arrow-style,
-  .arrow-style-invert {
+  .arrow-style-invert,
+  .container.page-first-header {
     padding-left: 40px;
     padding-right: 40px;
   }
@@ -6567,6 +6590,13 @@ img.blog-icon {
   .ref5 {
     padding-right: 69px;
   }
+  .container.page-first-header h1 {
+    line-height: 48px;
+    font-size: 48px;
+  }
+  .container.page-first-header .lead {
+    font-size: 20px;
+  }
 }
 @media all and (max-width: 728px) {
   .position1 {
@@ -6574,6 +6604,7 @@ img.blog-icon {
   }
   .position2 {
     right: -247px;
+    z-index: -1;
   }
 }
 @media all and (max-width: 719px) {
@@ -6646,6 +6677,7 @@ img.blog-icon {
   .visible570 {
     display: block;
     right: -41px;
+    top: -60px;
   }
   .how-it-works {
     width: 100%;
@@ -6664,9 +6696,15 @@ img.blog-icon {
     padding: 0;
   }
   .arrow-style,
-  .arrow-style-invert {
+  .arrow-style-invert,
+  .container.page-first-header {
     padding-left: 20px;
     padding-right: 20px;
+  }
+  img.mission-icon {
+    width: 95px;
+    top: -5px;
+    left: -48px;
   }
   /************* font sizes *************/
   .about-block h3.uppercase {
@@ -6680,12 +6718,137 @@ img.blog-icon {
 }
 @media all and (max-width: 460px) {
   .half {
-    padding-right: 50px;
+    padding-right: 56px;
+  }
+  .referral-works {
+    background-position: left center !important;
+    background-size: 35px;
+    height: auto;
+    padding-left: 50px;
+    width: 330px;
+  }
+  .ref4,
+  .ref5 {
+    padding-right: 0;
+  }
+  .last-about-block.text-right {
+    text-align: left;
+    padding-right: 0;
+    margin: 0;
+  }
+}
+@media all and (max-width: 435px) {
+  .about-block h4.uppercase.padright60on410 {
+    padding-right: 20px;
+  }
+  .nav-is-overlay .page-title-4.image-bg:first-child {
+    height: 166px;
+  }
+  .first-about-block .about-block.mt56,
+  .about-block img.bigger-image {
+    margin-top: 0;
+  }
+  .container.page-first-header h1 {
+    line-height: 40px;
+    font-size: 38px;
+  }
+  .container.page-first-header .lead {
+    font-size: 16px;
   }
 }
 @media all and (max-width: 410px) {
   .half {
     padding-right: 0;
+  }
+  .padright60on410,
+  .about-block h4.uppercase.padright60on410,
+  .about-block h5.uppercase.padright60on410 {
+    padding-right: 60px;
+  }
+  .about-block h3.uppercase.padright109on410 {
+    padding-right: 109px;
+  }
+  .position2 {
+    top: -82px;
+    width: 206px;
+    right: -100px;
+  }
+  .mission {
+    width: 230px;
+  }
+  img.mission-icon {
+    top: -21px;
+  }
+  img.blog-icon {
+    width: 51px;
+    top: -14px;
+    left: 103px;
+  }
+  .position3 {
+    bottom: -70px;
+  }
+  /********* font sizes ********/
+  .about-block h3.uppercase,
+  .about-block h3.uppercase.fs35on550 {
+    line-height: 33px;
+    font-size: 33px;
+  }
+}
+@media all and (max-width: 360px) {
+  .how-it-works2.mt40 {
+    margin-top: 0;
+  }
+  .how-it-works2.mt40 h3 {
+    margin: 0 0 20px;
+  }
+  .center-cont .about-block.width90-mob {
+    width: 100%;
+  }
+  .visible570 {
+    top: -30px;
+    width: 100px;
+  }
+  .mission h3 {
+    width: 200px;
+  }
+  img.mission-icon {
+    width: 72px;
+    top: -14px;
+    left: -30px;
+  }
+  img.blog-icon {
+    width: 44px;
+    left: 77px;
+  }
+  .position1 {
+    right: -291px;
+    width: 404px;
+  }
+  .about-block h3.uppercase.padright109on410,
+  .referral h3.padright60on410 {
+    padding-right: 0;
+  }
+  .referral-works {
+    padding-left: 45px;
+    width: 290px;
+  }
+  /*********** font sizes **********/
+  .about-block h3.uppercase,
+  .about-block h3.uppercase.fs35on550 {
+    line-height: 26px;
+    font-size: 24px;
+  }
+  .about-block h4.uppercase {
+    font-size: 18px;
+  }
+  .about-block h5.uppercase,
+  .about-block .phrase {
+    font-size: 16px;
+  }
+  p,
+  .how-it-works li,
+  body {
+    font-size: 14px;
   }
 }
 /************************
@@ -6698,6 +6861,13 @@ DESKTOP FIXES
   }
 }
 @media all and (max-width: 1366px) {
+  .module.widget-handle i {
+    line-height: 60px;
+  }
+  .foundry_modal[modal-link="0"] .btn.check-time-button {
+    margin-bottom: 0;
+    min-width: 137px;
+  }
   .nav-bar {
     height: 60px;
     max-height: 60px;
