admin dashboard asnd referrals for admin user profile

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9774,4 +9774,8 @@ tr.periods {
 .w90px {
   width: 90px; }
 
+.box-pie-title {
+  margin: 0;
+  font-size: 30px; }
+
 /*# sourceMappingURL=admin.css.map */
