--- a/resources/assets/sass/admin/app.scss
+++ b/resources/assets/sass/admin/app.scss
@@ -328,3 +328,36 @@ tr.periods {
   margin: 0;
   font-size: 30px;
 }
+
+table{
+  &.summary-consultants {
+    width: 100%;
+  }
+  tr{
+    height: 30px;
+  }
+  .consultant-color-preview{
+    width: 20px;
+    height: 20px;
+  }
+}
+.box-body{
+  &.consultants-summary{
+    max-height: 195px;
+    overflow: auto;
+  }
+}
+.questions-summary{
+  ul {
+    list-style: none;
+    padding-left: 0;
+    li {
+      text-decoration: none;
+      font-size: 16px;
+      h4 {
+        font-variant: small-caps;
+        font-size: 30px;
+      }
+    }
+  }
+}
