created top 10 statistics for admin dashboard

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -9808,4 +9808,7 @@ table .consultant-color-preview {
 .admin-users-list > li {
   width: 10%; }
 
+.summary-top {
+  width: 100%; }
+
 /*# sourceMappingURL=admin.css.map */
